# techno-globe

./: .gitignore  CMakeLists.txt  LICENSE  README.md  appplex-conf.kxmd  compile-cmake-gui.cmd  compile-cmake.cmd
pfm/emscripten/: appplex-src.html
pfm/emscripten/src/: CMakeLists.txt  main.cpp  main.hpp
pfm/emscripten/src/res/shaders/: 3d-globe-bg.fsh  basic_tex.fsh  globe-dot.vsh  globe-spike-base-id.fsh  globe-spike-base-id.vsh  globe-spike-base.fsh  globe-spike-base.vsh  globe-spike.vsh  sky-box.fsh
pfm/emscripten/src/res/shaders/freetype-gl/: v3f-t2f-c4f.frag  v3f-t2f-c4f.vert
pfm/msvc/src/: CMakeLists.txt  main.cpp  main.hpp
src/: CMakeLists.txt
src/app/: CMakeLists.txt
src/app/ext/: CMakeLists.txt
src/app/ext/com/: CMakeLists.txt
src/app/ext/com/unit/: CMakeLists.txt  gesture-detectors.hpp  input-ctrl.cpp  input-ctrl.hpp  transitions.cpp  transitions.hpp  update-ctrl.cpp  update-ctrl.hpp
src/app/ext/com/util/: CMakeLists.txt  util.cpp  util.hpp
src/app/ext/com/util/unicode/: boost-filesystem-util.hpp  boost-program-options-util.hpp  conversions-util.hpp
src/app/ext/com/ux/: CMakeLists.txt  font-db.cpp  font-db.hpp  text-vxo.cpp  text-vxo.hpp  ux-camera.cpp  ux-camera.hpp  ux-com.cpp  ux-com.hpp  ux-ext.cpp  ux-ext.hpp  ux-font.cpp  ux-font.hpp  ux.cpp  ux.hpp
src/app/ext/media/: CMakeLists.txt
src/app/ext/media/gfx/: CMakeLists.txt  gfx-camera.cpp  gfx-camera.hpp  gfx-color.cpp  gfx-color.hpp  gfx-material.cpp  gfx-material.hpp  gfx-obj.cpp  gfx-obj.hpp  gfx-quad-2d.cpp  gfx-quad-2d.hpp  gfx-rt.cpp  gfx-rt.hpp  gfx-scene.cpp  gfx-scene.hpp  gfx-shader.cpp  gfx-shader.hpp  gfx-state-const.hpp  gfx-state.cpp  gfx-state.hpp  gfx-tex.cpp  gfx-tex.hpp  gfx-util.cpp  gfx-util.hpp  gfx-vxo.cpp  gfx-vxo.hpp  gfx.cpp  gfx.hpp
src/app/ext/media/gfx/ext/: CMakeLists.txt  gfx-param-surface.cpp  gfx-param-surface.hpp  gfx-surface.cpp  gfx-surface.hpp  gfx-trail.cpp  gfx-trail.hpp
src/app/ext/media/res-ld/: CMakeLists.txt  res-ld.cpp  res-ld.hpp
src/app/ext/tlib/: CMakeLists.txt
src/app/ext/tlib/rng/: CMakeLists.txt  rng.cpp  rng.hpp
src/app/ext/tlib/tiny-obj-loader/: CMakeLists.txt  tiny_obj_loader.cpp
src/app/ext/tlib/utils/: CMakeLists.txt  free-camera.cpp  free-camera.hpp
src/app/min/: CMakeLists.txt  cpp-property.hpp  data-sequence.cpp  data-sequence.hpp  min.cpp  min.hpp  pfm-def.h  pfm.cpp  pfm.hpp  pfmgl.h  stdafx.h
src/app/min/unit/: CMakeLists.txt  unit-ctrl.cpp  unit-ctrl.hpp  unit.cpp  unit.hpp
src/app/units/: CMakeLists.txt
src/app/units/private/: CMakeLists.txt
src/app/units/private/npw/: CMakeLists.txt
src/app/units/private/npw/techno-globe/: CMakeLists.txt  unit-techno-globe.cpp  unit-techno-globe.hpp
src/app/units/private/npw/techno-globe/res/: city-coord
src/app/units/private/npw/techno-globe/res/runtime-data/: res-file
src/app/units/private/npw/techno-globe/res/runtime-data/shaders/: 3d-globe-bg.fsh  3d-globe-bg.vsh  3d-globe-outline.fsh  3d-globe-outline.vsh  billboard-gen-halo.fsh  billboard.fsh  billboard.vsh  globe-border.fsh  globe-dot.fsh  globe-spike-base.fsh  globe-spike.fsh  globe-spike.vsh  hot-spot-lines.fsh  ldo-test.vsh  sky-box-2.fsh  sky-box.fsh  sky-box.vsh
src/app/units/private/npw/techno-globe/res/shaders/: globe-border.fsh  globe-dot.vsh  hot-spot-lines.vsh  ldo-test.fsh  sky-box.fsh
src/lib/: CMakeLists.txt
src/lib/std/inc/: ft2build.h
src/lib/std/inc/freetype-gl/: edtaa3func.h  font-manager.h  freetype-gl.h  markup.h  mat4.h  opengl.h  platform.h  shader.h  text-buffer.h  texture-atlas.h  texture-font.h  vec234.h  vector.h  vertex-attribute.h  vertex-buffer.h
src/lib/std/src/: CMakeLists.txt
src/lib/std/src/fmt/: CMakeLists.txt  format.cc  ostream.cc  posix.cc  printf.cc
src/lib/std/src/freetype-gl/: CMakeLists.txt  edtaa3func.c  font-manager.c  mat4.c  platform.c  shader.c  text-buffer.c  texture-atlas.c  texture-font.c  vector.c  vertex-attribute.c  vertex-buffer.c
src/res/shaders/: c_o.fsh  conv-rgb-2-u-420.fsh  conv-rgb-2-v-420.fsh  conv-rgb-2-y-420.fsh  conv-rgb-2-yuv-420.vsh
web-build/: index.html
web-build/js/: appplex.html  appplex.html.mem  appplex.js
web-build/wasm/: appplex.html  appplex.js  appplex.wasm
